Fix styling on mobile by being more explicit

--- a/app/assets/stylesheets/20-crossword/crossword.scss
+++ b/app/assets/stylesheets/20-crossword/crossword.scss
@@ -33,6 +33,9 @@
 
 .crossword__box{
   justify-self: stretch;
+  padding: 0;
+  margin: 0;
+  border-radius: 0px;
   border: solid 1px black;
   font-family: 'Indie Flower', serif;
   font-size: 1.5em;
